@@ -33,6 +33,7 @@
   passed.  Use $var => ... to pass a named value.
 - toplevel sleep scripts are now executed as a closure... this
   allows callcc to work from the top level.
+- fixed a memory leak caused by stack pollution within loops.  
 
 2.1-beta 20  (12 Nov 07)
 ===========
